# colormap

./: README.md  colormap.h  meson.build  tests.cpp
ramps/: Makefile  ramps.c
